# sbnd

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
conf/: test.yaml  train.yaml
conf/eval/: bch-31-21.yaml  bch-63-45.yaml  ebch-32-16.yaml  ldpc-ccsds-128-64.yaml  ldpc-rptu-96-48.yaml  ldpc-tukl-96-48.yaml  polar-rptu-128-64.yaml  rm-32-16.yaml
conf/exp/: crossmpt-bch-31-21-ml-1m-3dB-aug.yaml  crossmpt-bch-63-45-ml-4m-2dB-aug.yaml  crossmpt-bch-63-45-on-demand-2dB.yaml  crossmpt-bch-63-45-on-demand-3dB.yaml  dev-test-crossmpt.yaml  dev-test-ecct.yaml  dev-test-gru.yaml  dev-test-mocked.yaml  dev-test-recct.yaml  ecct-bch-31-21-ml-16m-3dB.yaml  ecct-bch-31-21-ml-1m-3dB-aug.yaml  ecct-bch-31-21-ml-1m-3dB.yaml  ecct-bch-31-21-ml-1mx16perm-3dB.yaml  ecct-bch-31-21-ml-1mx4perm-3dB.yaml  ecct-bch-31-21-ml-4m-3dB.yaml  ecct-bch-63-45-ml-1m-2dB-aug.yaml  ecct-bch-63-45-ml-4m-2dB-aug.yaml  ecct-bch-63-45-on-demand-2dB.yaml  ecct-bch-63-45-true-1m-2dB-aug.yaml  ecct-bch-63-45-true-4m-2dB-aug.yaml  ecct-ldpc-rptu-96-48-on-demand-3dB.yaml  ecct-ldpc-tukl-96-48-on-demand-3dB.yaml  ecct-polar-5g-crc11-128-100-ml-16m-25dB.yaml  ecct-polar-5g-crc11-128-100-ml-4m-3dB.yaml  ecct-polar-rptu-128-64-ml-16m-2dB.yaml  ecct-polar-rptu-128-64-on-demand-4dB.yaml  gru-bch-31-21-ml-16m-3dB.yaml  gru-bch-31-21-ml-1m-3dB-aug.yaml  gru-bch-31-21-ml-4m-3dB-aug.yaml  gru-bch-31-21-ml-4m-3dB.yaml  gru-bch-63-45-ml-4m-2dB-aug.yaml  recct-bch-31-21-ml-16m-3dB.yaml  recct-bch-31-21-ml-1m-3dB-aug.yaml  recct-bch-31-21-ml-4m-3dB.yaml  recct-bch-63-45-ml-4m-2dB-aug.yaml  recct-ebch-32-16-ml-16m-3dB.yaml  recct-ebch-32-16-ml-4m-3dB-aug.yaml  recct-ldpc-ccsds-128-64-on-demand-3dB.yaml  recct-ldpc-rptu-96-48-on-demand-3dB.yaml  recct-ldpc-tukl-96-48-ml-64m-3dB-aug.yaml  (+8 more)
data/codes/: bch.15.11.mat  bch.15.7.mat  bch.31.16.mat  bch.31.21.mat  bch.63.45.mat  bch.63.51.mat  bch.7.4.mat  ebch.128.64.mat  ebch.32.11.mat  ebch.32.16.mat  ebch.32.21.mat  ebch.64.45.mat  ldpc.ccsds.128.64.mat  ldpc.tukl.96.48.mat  polar.5g.crc11.128.100.mat  polar.rptu.128.64.mat  rm.32.16.mat
data/perms/: perms.polar.128.mat  perms.polar.rptu.128.64.mat  perms.rm.32.mat
docs/: evaluation.md  experiments.md  extending.md  training.md
log/test/: crossmpt-bch-31-21-ml-1m-3dB-aug-512epochs-frosty-pyramid-1843.csv  crossmpt-bch-63-45-on-demand-3dB-128epochs-bright-glade-2001.csv  crossmpt-bch-63-45-on-demand-3dB-512epochs-ethereal-plasma-2006.csv  ecct-bch-31-21-ml-16m-3dB-128epochs-daily-haze-1907.csv  ecct-bch-31-21-ml-16m-3dB-128epochs-devoted-puddle-1794.csv  ecct-bch-31-21-ml-1m-3dB-128epochs-celestial-fog-1911.csv  ecct-bch-31-21-ml-1m-3dB-128epochs-chocolate-wildflower-1797.csv  ecct-bch-31-21-ml-1m-3dB-aug-512epochs-resilient-sun-1793.csv  ecct-bch-31-21-ml-1mx16perm-3dB-128epochs-happy-night-1912.csv  ecct-bch-31-21-ml-1mx16perm-3dB-128epochs-unique-river-1795.csv  ecct-bch-31-21-ml-1mx4perm-3dB-128epochs-daily-night-1796.csv  ecct-bch-31-21-ml-1mx4perm-3dB-128epochs-worthy-feather-1910.csv  (+56 more)
src/: codes.py  crossmpt.py  data.py  decoder.py  ecct.py  gru.py  lr_sched.py  mocked.py  model.py  recct.py  test.py  train.py  transforms.py  tts.py  utils.py
