[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "sbnd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9",
    "lightning",
    "hydra-core>=1.3",
    "hydra-colorlog",
    "colorlog",
    "omegaconf",
    "numpy",
    "scipy",
    "h5py",
    "tqdm",
    "tabulate",
]

[project.optional-dependencies]
wandb = ["wandb"]

[project.scripts]
sbnd-train = "sbnd.train:main"
sbnd-test  = "sbnd.test:main"

[tool.setuptools]
package-dir = {"sbnd" = "src"}
packages    = ["sbnd"]

[dependency-groups]
dev = ["black>=26", "mypy>=1.20"]

# uv-specific: resolve torch from PyTorch's own wheel index so that uv sync /
# uv run automatically fetch the CUDA build on Linux/Windows and the CPU build
# on macOS. These sections are ignored by pip and uv pip — see README for the
# corresponding --extra-index-url instructions.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
]

[[tool.uv.indexes]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.indexes]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
