[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "sbnd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9",
    "lightning",
    "hydra-core>=1.3",
    "hydra-colorlog",
    "colorlog",
    "omegaconf",
    "numpy",
    "scipy",
    "h5py",
    "tqdm",
    "tabulate",
]

[project.optional-dependencies]
wandb = ["wandb"]

[project.scripts]
sbnd-train = "sbnd.train:main"
sbnd-test  = "sbnd.test:main"

[tool.setuptools]
package-dir = {"sbnd" = "src"}
packages    = ["sbnd"]

[dependency-groups]
dev = ["black>=26", "mypy>=1.20"]

# uv-specific: pass --torch-backend=auto (or =cu128, =cu131, etc.) to uv sync /
# uv run so that uv fetches the CUDA-specific PyTorch wheel matching your driver.
# Without --torch-backend, uv resolves torch from PyPI (CPU-only on Linux/Windows).
# These sections are ignored by pip and uv pip — see README for those instructions.

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
